# distmod

./: CMakeLists.txt  Makefile  README.md  demo.c
cbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  distrand-demo
demo/: benchs.c  benchs.h  config.h  hist.c  hist.h  main.c  measure_time.h
examples/: common.h  distribution.c  distributions.h  perfomance.c
include/: distmod.h  distrand.h  dmode.h  log.h  types.h
include/distributed/edsrm/: 2rng.h  cache.h  generate.h  mnt.h  monotonous.h
include/distributed/ziggurat/: mnt.h
include/prob_eq/: dbd.h  prob_eq.h  types.h
include/uniform/: mt19937_64.h  multiplicative.h  perfomance.h  uniform.h
res/: a.out  log.txt
src/distributed/edsrm/: 2rng.c  cache.c  generate.c  mnt.c  monotonous.c
src/distributed/ziggurat/: mnt.c
src/prob_eq/: dbd.c
src/uniform/: mt19937_64.c  multiplicative.c
